4-Adavance/A B Testing/A-B-ingress-demo.yaml
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: A-B-ingress-testing
  # Namespace 
  namespace: k8s-training
  annotations:
      nginx.ingress.kubernetes.io/service-match: |     
          new-nginx: header("version", /^b$/)

spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: www.springbootdemo.com
      http:
        paths:
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: springbootdemo-v1
                port:
                  number: 9999    
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: springbootdemo-v2
                port:
                  number: 9999
