4-Adavance/A B Testing/B-ingress-demo.yaml
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: b-ingress-testing
  # Namespace 
  namespace: k8s-training
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/canary: "true"
      #nginx.ingress.kubernetes.io/canary-weight: "50"
      nginx.ingress.kubernetes.io/canary-by-header: "Region"
      nginx.ingress.kubernetes.io/canary-by-header-pattern: "cd|sz"
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: www.springbootdemo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/          
            backend:
              service:
                name: springbootdemo-v2
                port:
                  number: 9999
